new version for dashboard

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ TRADING_PAIRS=BTC-USD,ETH-USD
 DECISION_INTERVAL_MINUTES=60
 MAX_INVESTMENT_PER_TRADE_USD=100
 RISK_LEVEL=medium
+SIMULATION_MODE=false
 
 # Logging settings
 LOG_LEVEL=INFO
