--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ google-cloud-aiplatform>=1.25.0
 google-auth>=2.22.0
 schedule==1.2.0
 dataclasses==0.6
-flask==2.0.1
+# No longer needed as we're using Python's built-in http.server
+# flask==2.0.1
+# werkzeug==2.0.1
