--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ SIMULATION_MODE=true
 # Portfolio settings
 PORTFOLIO_REBALANCE=true
 MAX_TRADE_PERCENTAGE=25
+TARGET_CRYPTO_ALLOCATION=80
+TARGET_USD_ALLOCATION=20
 
 # Logging settings
 LOG_LEVEL=INFO
