--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,7 @@ LLM_LOCATION=us-central1
 # Trading settings
 TRADING_PAIRS=BTC-USD,ETH-USD
 DECISION_INTERVAL_MINUTES=60
-RISK_LEVEL=hybrid
-RISK_WEIGHT_LOW=0.0
-RISK_WEIGHT_MEDIUM=0.5
-RISK_WEIGHT_HIGH=0.5
+RISK_LEVEL=medium
 SIMULATION_MODE=true
 
 # Portfolio settings
