--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ MAX_TRADE_PERCENTAGE=25
 TARGET_CRYPTO_ALLOCATION=80
 TARGET_USD_ALLOCATION=20
 
+# Dashboard settings
+DASHBOARD_TRADE_HISTORY_LIMIT=10
+
 # Logging settings
 LOG_LEVEL=INFO
 LOG_FILE=logs/crypto_bot.log
