Implement enhanced active trading strategy and fix dashboard issues
Major Trading Strategy Enhancements:
- Lower confidence thresholds from 80% to 60% for more active trading
- Implement dynamic risk management with position sizing instead of trade avoidance
- Add weighted technical analysis: MACD (40%), RSI (30%), Bollinger Bands (30%)
- Narrow RSI neutral range from 40-60 to 45-55 for more definitive signals
- Add trend alignment bonuses (+10%) and counter-trend penalties (-5%)
- Enable USD allocation and portfolio rebalancing for better flexibility

Configuration Updates:
- Add new .env variables for enhanced trading strategy
- Update config.py to support new trading parameters
- Add risk multipliers for high/medium/low risk scenarios
- Configure trade size limits and rebalancing thresholds

Dashboard Fixes:
- Fix broken market data symlinks pointing to outdated files
- Resolve portfolio data structure mismatch (uppercase vs lowercase)
- Fix JavaScript selector issues causing TypeError
- Update portfolio calculation to use actual data structure
- Add proper error handling and fallbacks for missing data
- Create update_market_symlinks.py utility for maintaining latest data

Code Improvements:
- Enhance trading_strategy.py with new confidence thresholds and risk logic
- Update llm_analyzer.py with improved technical indicator analysis
- Add comprehensive logging and error handling
- Improve dashboard data loading and display functions

Documentation:
- Update README.md with detailed enhanced strategy documentation
- Add configuration examples and performance improvement details
- Document new .env variables and their purposes
- Add troubleshooting guides for dashboard issues

This update transforms the bot from conservative to active trading while maintaining
proper risk management through intelligent position sizing rather than trade avoidance.

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ TARGET_USD_ALLOCATION=20
 # Dashboard settings
 DASHBOARD_TRADE_HISTORY_LIMIT=10
 
+# Web Server Sync Configuration
+WEBSERVER_SYNC_ENABLED=true
+WEBSERVER_SYNC_PATH=/var/www/html/crypto-bot
+
 # Logging settings
 LOG_LEVEL=INFO
 LOG_FILE=logs/crypto_bot.log
