Major Enhancement: AI-First Trading Strategy & Comprehensive Dashboard Improvements
🎯 CORE STRATEGY TRANSFORMATION:
• Replaced rigid portfolio rebalancing with AI-first trading strategy
• Removed trade-blocking rebalancing logic that was destroying profitable trades
• Implemented smart safety limits (€50 min EUR, 35% max EUR, 3% min crypto)
• Added dynamic position sizing based on AI confidence levels (0.5x to 1.5x)
• Enhanced risk management with confidence thresholds (70% minimum)

🧠 ENHANCED AI ANALYSIS:
• Comprehensive AI reasoning display in trading history details
• Technical indicators analysis (RSI, MACD, Bollinger Bands) with visual formatting
• Bot decision process transparency with confidence checks and risk management
• Market context display with price changes, trends, and analysis quality metrics
• Professional-grade analysis comparable to institutional trading tools

📊 DASHBOARD IMPROVEMENTS:
• Replaced "Portfolio Rebalancing" with "AI-First Trading Strategy" section
• Enhanced trading history with detailed AI analysis (4 comprehensive sections)
• Improved EUR balance warnings with popup tooltips instead of permanent boxes
• Fixed metric visibility issues with high-contrast styling
• Removed redundant "Trading Balance Status" section for cleaner interface
• Added professional visual design with gradients, color coding, and structured layouts

⚙️ CONFIGURATION UPDATES:
• Migrated from USD to EUR as base currency throughout the system
• Updated minimum trade amount from €10 to €30 for meaningful trades
• Disabled rigid portfolio rebalancing (PORTFOLIO_REBALANCE=false)
• Enhanced configuration validation and error handling
• Improved currency handling and precision in all calculations

🔧 TECHNICAL IMPROVEMENTS:
• Enhanced Coinbase client with better error handling and EUR support
• Improved trade execution logic with dynamic position sizing
• Better risk management integration with AI confidence scoring
• Enhanced data collection and analysis pipeline
• 

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,29 @@ tmp/
 # Debug scripts
 debug_*.py
 test_dashboard.py
+
+# Temporary and test files
+test_*.py
+debug_*.py
+check_*.py
+fix_*.py
+*_temp.py
+*_backup.py
+
+# Documentation drafts
+*_SUMMARY.md
+*_FIX.md
+*_IMPLEMENTATION.md
+TEMP_*.md
+
+# Support files
+*support_ticket*
+*troubleshooting*
+
+# Old data files
+data/*_USD_*.json
+data/old_*
+
+# Large logs
+logs/*.log.*
+logs/*_old.log
