Final Cleanup: Remove unused files, clean imports, and update documentation
🧹 COMPREHENSIVE CLEANUP:
• Removed 13 unused files (backtesting tools, maintenance scripts, temporary files)
• Cleaned unused imports from utils/webserver_sync.py
• Updated .gitignore with additional cleanup patterns
• Created STRUCTURE.md project documentation

📚 DOCUMENTATION UPDATES:
• Completely rewrote README.md with current AI-first strategy
• Added comprehensive configuration examples
• Documented all features and safety mechanisms
• Included troubleshooting and deployment guides

🎯 PROJECT OPTIMIZATION:
• Removed backtesting.py, backtest_cli.py (not used in production)
• Removed strategy_analyzer.py (analysis tool, not core functionality)
• Removed maintenance scripts (cleanup_logs.sh, setup_log_rotation.sh, etc.)
• Removed dangerous reset_bot_data.sh script
• Kept reports/ directory (used by strategy evaluator)

✅ RESULT:
Clean, production-ready codebase with only essential files and comprehensive documentation

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,18 @@ data/old_*
 # Large logs
 logs/*.log.*
 logs/*_old.log
+
+# Analysis and cleanup files
+analyze_*.py
+cleanup_*.py
+*_analysis.py
+*_cleanup.py
+
+# Temporary documentation
+*_COMPLETE.md
+*_ANALYSIS.md
+PROJECT_*.md
+
+# Credentials (should be in secure location)
+google.json
+*.json.backup
