--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ python-dotenv==1.0.0
 requests==2.31.0
 pandas==2.0.3
 numpy==1.24.3
-matplotlib==3.7.2
 coinbase-advanced-py==1.8.2
 google-cloud-aiplatform>=1.25.0
 google-auth>=2.22.0
 schedule==1.2.0
 dataclasses==0.6
+psutil>=5.9.0
 # No longer needed as we're using Python's built-in http.server
 # flask==2.0.1
 # werkzeug==2.0.1
