feat: Add comprehensive uptime management system and bot lifecycle management
🕒 Advanced Uptime Management System:

✨ Core Components:
- bot_manager.py: Professional bot lifecycle management script
- utils/uptime_manager.py: Persistent uptime tracking across restarts
- UPTIME_MANAGEMENT.md: Complete documentation for uptime system

🔧 Smart Uptime Behavior:
- Restarts preserve uptime (config changes, updates, service restarts)
- Only explicit stops reset uptime counter
- Crash recovery maintains uptime continuity
- Cross-platform support (systemd, supervisor, standalone)

🛠️ Bot Manager Features:
- python bot_manager.py start/stop/restart/status
- Proper signal handling with graceful shutdowns
- Process management with PID tracking
- Integration with service managers (systemd/supervisor)
- Context-aware restart vs stop operations

⚙️ Service Integration:
- Updated crypto-bot.service with uptime-aware ExecStop/ExecReload
- Graceful shutdown timeout (30 seconds)
- Mixed kill mode (SIGTERM then SIGKILL)
- Environment context for restart vs stop operations

📊 Enhanced Main Bot:
- Integrated uptime manager into main bot loop
- Proper startup/shutdown lifecycle management
- Signal handler registration for graceful exits
- Persistent uptime data storage in data/cache/

🔐 Configuration Template:
- google.json.template: Template for Google Cloud service account
- Placeholder values for secure credential setup
- Referenced in setup documentation

💾 Data Persistence:
- data/cache/bot_uptime.json: Persistent uptime tracking
- data/cache/bot_startup.json: Current session information
- Automatic directory creation and file management

This creates a professional-grade bot management system with true
uptime persistence that works across all deployment scenarios.

--- a/crypto-bot.service
+++ b/crypto-bot.service
@@ -7,12 +7,20 @@ Type=simple
 User=ec2-user
 WorkingDirectory=/home/ec2-user/AI-crypto-bot
 ExecStart=/home/ec2-user/miniconda3/envs/crypto-bot/bin/python /home/ec2-user/AI-crypto-bot/main.py
+# Use bot_manager.py stop only for explicit stops, not restarts
+ExecStop=/bin/bash -c 'export BOT_RESTART_CONTEXT=stop && /home/ec2-user/miniconda3/envs/crypto-bot/bin/python /home/ec2-user/AI-crypto-bot/bot_manager.py stop'
+# Set restart context for automatic restarts
+ExecReload=/bin/bash -c 'export BOT_RESTART_CONTEXT=restart && /bin/kill -TERM $MAINPID'
 Restart=on-failure
 RestartSec=10
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=crypto-bot
 Environment=PYTHONUNBUFFERED=1
+# Graceful shutdown timeout
+TimeoutStopSec=30
+# Send SIGTERM first, then SIGKILL
+KillMode=mixed
 
 [Install]
 WantedBy=multi-user.target
