Remove uptime monitoring system and fix EUR portfolio support
Major Changes:
- Remove complex uptime tracking system (UptimeManager, restart detection, persistent uptime)
- Simplify bot startup/shutdown logging and signal handling
- Remove psutil dependency and related warnings
- Fix portfolio sync to use EUR base currency instead of hardcoded USD
- Update dashboard to show simple session uptime instead of complex restart counts
- Simplify bot_manager.py to remove uptime-related complexity
- Update documentation to remove psutil references

Fixes:
- Portfolio overview now displays correct EUR values and crypto holdings
- Dashboard no longer shows 'no data' for portfolio
- Eliminated psutil warnings in logs
- Cleaner, more reliable codebase with ~500 lines of complexity removed

Technical Details:
- Updated coinbase_client.py get_portfolio() to use config.BASE_CURRENCY (EUR)
- Fixed trading pair extraction to look for -EUR instead of -USD pairs
- Updated portfolio structure to use portfolio_value_eur, last_price_eur, etc.
- Simplified main.py startup/shutdown methods
- Updated dashboard JavaScript to show session uptime only

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ google-cloud-aiplatform>=1.25.0
 google-auth>=2.22.0
 schedule==1.2.0
 dataclasses==0.6
-psutil>=5.9.0
+# psutil - removed (was only used for uptime monitoring)
 # No longer needed as we're using Python's built-in http.server
 # flask==2.0.1
 # werkzeug==2.0.1
