feat: Create dedicated Performance dashboard and enhance navigation
✨ New Features:
- Created standalone Performance dashboard (performance.html)
- Added Performance navigation link between Dashboard and Analysis
- Comprehensive performance analytics with real-time updates

🎯 Performance Dashboard Features:
- Live performance metrics (Total Return, Daily P&L, Win Rate, Portfolio Value)
- Recent trade performance tracking with confidence scoring
- Active strategy status and configuration display
- Asset allocation analysis with current vs target comparison
- Interactive portfolio value chart with Chart.js
- Real-time data updates every 60 seconds
- Professional responsive design with Bootstrap Yeti theme

🧹 Main Dashboard Cleanup:
- Removed Performance tab from main dashboard
- Eliminated duplicate Performance functionality (~314 lines)
- Cleaned up JavaScript functions and references
- Improved main dashboard loading performance

🔧 Technical Improvements:
- Added proper shared header loading to Performance page
- Updated navigation structure across all pages
- Enhanced notification service functionality
- Improved configuration management
- Updated dependencies and requirements

📱 Navigation Structure:
Dashboard → Performance → Analysis → Logs → Configuration

🚀 Deployment:
- All changes deployed to webserver
- Performance dashboard accessible via navigation
- Maintains consistency with existing bot theme and functionality

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,8 @@ WEBSERVER_SYNC_PATH=/var/www/html/crypto-bot
 # Logging settings
 LOG_LEVEL=INFO
 LOG_FILE=logs/crypto_bot.log
+
+# Push Notification settings (Pushover)
+NOTIFICATIONS_ENABLED=false
+PUSHOVER_TOKEN=your_pushover_app_token
+PUSHOVER_USER=your_pushover_user_key
