feat: Implement comprehensive configuration tests (Phase 1 - First Test)
🧪 First Test Implementation Complete:
- Created tests/unit/test_config.py with 37 comprehensive test cases
- Achieved 100% code coverage on config.py module
- Fixed requirements-dev.txt package name issue (pdb++ → pdbpp)

📊 Test Coverage:
- TestConfigInitialization: Default values, env vars, boolean/numeric parsing
- TestTradingPairsParsing: Single/multiple pairs, duplicates, whitespace handling
- TestAllocationCalculations: Individual allocations, target allocation dictionary
- TestCurrencyFormatting: Currency symbols, amount formatting
- TestRiskManagementSettings: Risk multipliers, confidence thresholds, trade limits
- TestTechnicalAnalysisSettings: Indicator weights, RSI neutral range
- TestNotificationSettings: Pushover configuration
- TestWebServerSyncSettings: Dashboard sync configuration
- TestBackwardCompatibility: Legacy environment variable support
- TestModuleLevelVariables: Module-level variable availability
- TestConfigValidation: Error handling, invalid values
- TestConfigIntegration: Complete configuration setup, consistency checks

🎯 Test Results:
- ✅ 37 tests passed
- ✅ 100% code coverage
- ✅ 0.45s execution time
- ✅ All configuration scenarios covered

🔧 Testing Infrastructure:
- Proper environment variable mocking
- Comprehensive edge case testing
- Integration tests for complete workflows
- Validation of calculated values and consistency

This establishes the foundation for all other tests and ensures
configuration management is bulletproof before implementing
other critical components.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -44,5 +44,5 @@ line-profiler>=4.1.0        # Line-by-line profiling
 py-spy>=0.3.0               # Sampling profiler
 
 # Debugging
-pdb++>=0.10.0               # Enhanced debugger
+pdbpp>=0.10.3               # Enhanced debugger (fixed package name)
 ipdb>=0.13.0                # IPython debugger
