fix: Add missing test files to git tracking
🐛 Critical Fix - Test Files Not Tracked:
- Fixed .gitignore pattern 'test_*.py' that was excluding all test files
- Added tests/unit/test_config.py and tests/unit/test_coinbase_client.py to tracking
- Updated .gitignore to be more specific about excluded files

📁 Files Now Tracked:
- tests/unit/test_config.py (37 tests, 100% coverage)
- tests/unit/test_coinbase_client.py (38 tests, 53% coverage)

🔧 .gitignore Improvements:
- Removed overly broad 'test_*.py' pattern
- Added specific coverage file exclusions (.coverage, htmlcov/)
- Added pytest cache exclusion (.pytest_cache/)
- Kept specific test_notifications.py exclusion (temporary script)

⚠️ Important: This ensures our comprehensive test suite is properly
version controlled and available for CI/CD pipelines and team collaboration.

--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,7 @@ tmp/
 debug_*.py
 test_dashboard.py
 
-# Temporary and test files
-test_*.py
+# Temporary and test files (but NOT tests/ directory)
 debug_*.py
 check_*.py
 fix_*.py
@@ -109,3 +108,11 @@ PROJECT_*.md
 # Credentials (should be in secure location)
 google.json
 *.json.backup
+
+# Coverage files
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Test notification script (temporary)
+test_notifications.py
