🧹 Repository cleanup: Remove temporary fix files and documentation
- Remove temporary fix documentation files:
  - header_fix_summary.md
  - header_session_fix_summary.md
  - portfolio_fix_summary.md
  - test_header.html
- Update .gitignore to properly handle test_notifications.py as utility script
- Add test_notifications.py as legitimate utility for notification testing
- Keep all proper test files in tests/ directory intact

Repository is now clean of one-time fix scripts and temporary documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,5 @@ google.json
 htmlcov/
 .pytest_cache/
 
-# Test notification script (temporary)
-test_notifications.py
+# Test notification script is kept as utility
 .coverage
