Enhanced backtesting implementation plan with cloud storage architecture
- Replaced basic plan with comprehensive enhanced version
- Added Google Cloud Storage architecture for historical data
- Detailed technical specifications and dependencies
- Enhanced risk management and error handling
- Added Google credentials pattern to .gitignore
- Added historical data cache exclusions

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ data/
 reports/
 *.db
 *.sqlite
+data/historical/
+*.parquet
 
 # IDE
 .vscode/
@@ -108,6 +110,7 @@ PROJECT_*.md
 # Credentials (should be in secure location)
 google.json
 *.json.backup
+intense-base*.json
 
 # Coverage files
 .coverage
