Fix .gitignore to allow utils/cleanup_manager.py
- Added exception for utils/cleanup_manager.py in .gitignore
- The cleanup_*.py pattern was incorrectly ignoring the essential cleanup manager
- This file is required for bot operation and should be tracked

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,8 @@ analyze_*.py
 cleanup_*.py
 *_analysis.py
 *_cleanup.py
+# But keep the utils cleanup manager
+!utils/cleanup_manager.py
 
 # Temporary documentation
 *_COMPLETE.md
