--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,15 @@ google-genai>=0.8.0
 google-auth>=2.22.0
 schedule>=1.2.0
 dataclasses==0.6
+
+# Backtesting Dependencies
+vectorbt>=0.25.0
+pandas-ta>=0.3.14b
+pyarrow>=10.0.0
+google-cloud-storage>=2.10.0
+numba>=0.58.0
+talib-binary>=0.4.19
+fastparquet>=0.8.3
 # python-pushover==0.4  # Using requests directly instead due to compatibility issues
 # psutil - removed (was only used for uptime monitoring)
 # No longer needed as we're using Python's built-in http.server
