--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ google-auth>=2.22.0
 schedule>=1.2.0
 # Backtesting Dependencies
 vectorbt>=0.25.0  # Compatible with Python 3.10
-pandas-ta>=0.4.71b0
+# Using ta library instead of pandas-ta for Python 3.10 compatibility
+ta>=0.11.0  # Technical analysis library compatible with Python 3.10
 pyarrow>=10.0.0
 google-cloud-storage>=2.10.0
 numba>=0.58.0
