Fix test failures and improve cross-platform compatibility
- Fix LLM analyzer tests to match actual GenAI Client initialization parameters
- Add project and location parameters to mock assertions
- Skip file permission tests on Windows (not applicable)
- Add psutil dependency for performance tests
- All tests now pass locally on Windows

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,4 @@ coverage>=7.2.0       # Additional coverage tools
 factory-boy>=3.3.0    # For test data generation
 freezegun>=1.2.0      # For time-based testing
 responses>=0.23.0     # For HTTP request mocking
+psutil>=5.9.0         # For system performance monitoring in tests
