Fix .gitignore to include important analysis scripts
 GITIGNORE FIX - Include important backtesting analysis scripts

## Problem
- analyze_intraday_opportunities.py and analyze_market_period.py were excluded by analyze_*.py pattern
- These are important analysis scripts that should be tracked in git
- They were moved to backtesting/ but remained ignored

## Solution
- Updated .gitignore to be more specific about analyze_*.py exclusions
- Added exception for backtesting/analyze_*.py files
- Now only excludes temporary/debug analysis scripts (analyze_temp*.py, analyze_debug*.py)

## Files Now Tracked
- backtesting/analyze_intraday_opportunities.py (intraday volatility analysis)
- backtesting/analyze_market_period.py (market period analysis)

These scripts are core to understanding market opportunities and should be version controlled.

--- a/.gitignore
+++ b/.gitignore
@@ -96,13 +96,15 @@ data/old_*
 logs/*.log.*
 logs/*_old.log
 
-# Analysis and cleanup files
-analyze_*.py
+# Analysis and cleanup files (temporary/debug scripts)
+analyze_temp*.py
+analyze_debug*.py
 cleanup_*.py
 *_analysis.py
 *_cleanup.py
-# But keep the utils cleanup manager
+# But keep the utils cleanup manager and important analysis scripts
 !utils/cleanup_manager.py
+!backtesting/analyze_*.py
 
 # Temporary documentation
 *_COMPLETE.md
