Fix .gitignore patterns for documentation files
- Changed *troubleshooting* to *troubleshooting_temp* to allow TROUBLESHOOTING.md
- Changed *_ANALYSIS.md to TEMP_*_ANALYSIS.md to allow PERFORMANCE_ANALYSIS.md
- These patterns were too broad and were ignoring legitimate documentation files
- Files should now appear properly tracked in IDE

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,8 @@ TEMP_*.md
 
 # Support files
 *support_ticket*
-*troubleshooting*
+*troubleshooting_temp*
+temp_troubleshooting*
 
 # Old data files
 data/*_USD_*.json
@@ -108,7 +109,7 @@ cleanup_*.py
 
 # Temporary documentation
 *_COMPLETE.md
-*_ANALYSIS.md
+TEMP_*_ANALYSIS.md
 PROJECT_*.md
 
 # Credentials (should be in secure location)
