Apply all adaptive system recommendations: documentation, monitoring, and testing
Immediate improvements:
- Updated .env.example with clear documentation of adaptive thresholds
- Added comments explaining CONFIDENCE_THRESHOLD values are display-only
- Documented all four market regimes and their thresholds

Medium-term improvements:
- Renamed config thresholds to DISPLAY_THRESHOLD_* for clarity
- Maintained backward compatibility with old names
- Created AdaptiveRegimeMonitor for tracking regime changes
- Integrated regime monitoring into main trading cycle
- Updated dashboard to show threshold explanatory note

Long-term improvements:
- Fixed division by zero bug in adaptive_strategy_manager.py
- Completed 4 previously skipped tests
- All 26 tests now passing (100% pass rate)
- Improved test coverage for error handling and performance tracking

New files:
- utils/dashboard/adaptive_regime_monitor.py - Regime monitoring system
- ADAPTIVE_SYSTEM_DEEP_ANALYSIS.md - Comprehensive analysis
- MARKET_REGIME_ADAPTATION_ANALYSIS.md - Market adaptation guide
- PERFORMANCE_REVIEW_2026-01-27_AFTERNOON.md - Performance analysis
- MARKET_REVIEW_2026-01-27.md - Market review and changes
- CHANGES_APPLIED_2026-01-27.md - Configuration changes log

Test results: 26/26 passing in 0.33s

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,16 @@ DECISION_INTERVAL_MINUTES=60
 RISK_LEVEL=medium
 SIMULATION_MODE=true
 
+# IMPORTANT: Confidence thresholds are LEGACY/DISPLAY ONLY
+# The adaptive system automatically uses regime-specific thresholds:
+# - Ranging markets: 30-35% (low volatility, sideways)
+# - Trending markets: 30-35% (growth/decline)
+# - Volatile markets: 35-45% (high volatility)
+# - Bear markets: 60/40% (declining + low volatility)
+# These values are shown in dashboard but NOT used for trading decisions
+# CONFIDENCE_THRESHOLD_BUY=60
+# CONFIDENCE_THRESHOLD_SELL=50
+
 # Portfolio settings
 MAX_TRADE_PERCENTAGE=25
 TARGET_CRYPTO_ALLOCATION=80
